<resources>
    <string name="app_name">FinancialCompanion</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_username">Username</string>
    <string name="user_password">Password</string>
    <string name="redirect_login">Already have an account? Login</string>
    <string name="redirect_signup">Don\'t have an account? Sign Up</string>
    <string name="title_activity_email_verification">EmailVerificationActivity</string>
    <string name="email_verify_text_2">A verification email has been sent to :</string>
    <string name="email_verify_text_3">Just click on the link in that email to complete your signup. If you don\'t see it, you may need to check your spam folder.</string>
    <string name="email_verify_text_4">Still can\'t find the email?</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="email_verify_text_1">Please verify your email</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="pet">Pet</string>
    <string name="me">Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pet_coins">Pet Coins</string>
    <string name="pet_coin_balance">%1$d Coins</string>
    <string name="transaction">Transaction</string>
    <string name="add_new_items">Add New Items</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="rm_text_ph">RM %1$.2f</string>
    <string name="account">Account</string>
    <string name="expenses">Expenses</string>
    <string name="transaction_icon">transaction_icon</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_more">See More</string>
    <string name="notification_icon">notification_icon</string>
    <string name="user_image">User Image</string>
    <string name="chevron_right">Chevron Right</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="logout">Logout</string>
    <string name="back">back</string>
    <string name="change_pass_instruction">No worries! Enter your email address below and we will send you a code to reset your password.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_code">Send Code</string>
    <string name="accounts">Accounts</string>
    <string name="budget">Budgets</string>
    <string name="goals">Goals</string>
    <string name="summary">Summary</string>
    <string name="submit">Submit</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_name">Account Name</string>
    <string name="balance">Balance:</string>
    <string name="more_options">More options</string>
    <string name="add_new_account">Add New Account</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="add_account_icon">Add Account Icon</string>
    <string name="savings_icon">Savings Icon</string>
    <string name="savings">Savings</string>
    <string name="your_goal_description_goes_here">Your goal description goes here.</string>
    <string name="description">Description</string>
    <string name="due_date">Due date:</string>
    <string name="goal_amount">Goal Amount</string>
    <string name="total_saved">Total Saved</string>
    <string name="change_pet">Change Pet</string>
    <string name="pet_coins_display">pet_coins_display</string>
    <string name="cupboard">Cupboard</string>
    <string name="item_shop">Item Shop</string>
    <string name="no_items_purchased">No items purchased</string>
    <string name="cat_image">Cat Image</string>
    <string name="cat">Cat</string>
    <string name="dog_image">Dog Image</string>
    <string name="dog">Dog</string>
    <string name="chosen">Chosen</string>
    <string name="change">Change</string>
    <string name="please_enter_your_initial_savings_balance">Please enter your initial savings balance.</string>
    <string name="no_goals_added">No goals added</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="select_account">Select Account</string>
    <string name="view_all">View all</string>
    <string name="filter">Filter</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="no_transactions_available">No transactions available</string>
    <string name="monthly_expenses">Monthly Expenses</string>
    <string name="select_month_year">Select Month/Year</string>
    <string name="month_year">Month/Year</string>
    <string name="close">close</string>
    <string name="select_month_range">Select Month Range</string>
    <string name="search_courses">Search for courses</string>
    <string name="favourites">Favourites</string>
    <string name="budgeting">Budgeting</string>
    <string name="invest">Investing</string>
    <string name="banking">Banking</string>
    <string name="planning">Planning</string>
    <string name="recommended">Recommended for you</string>
    <string name="course_intro">Hi! Lets find some courses and learn to earn together!</string>
    <string name="minute_read">Min read</string>
    <string name="edit_icon">edit icon</string>
    <string name="category">category</string>
    <string name="save_budget">Save Budget</string>
    <string name="enter_budget_amount">Enter Budget Amount</string>
    <string name="total_budget">Total Budget</string>
    <string name="total_spent">Total Spent</string>
    <string name="category_name">Category Name</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="save_button">save_button</string>
    <string name="delete_goal">delete goal</string>
    <string name="forgot_password">Forgot Password</string>
    <string-array name="transaction_types">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
</resources>
