<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- LinearLayout for "Cupboard" text and close icon -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Cupboard text -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cupboard"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:layout_weight="1"/>

        <!-- Close icon -->
        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close_24"
            android:layout_gravity="end"
            android:contentDescription="@string/close" />
    </LinearLayout>

    <TextView
        android:id="@+id/noItemsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_items_purchased"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="18dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inventoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
</LinearLayout>
